--- a/index.html
+++ b/index.html
@@ -11,8 +11,27 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="container text-center">
-    <h1>Pratica con il Grid System</h1>
+  <body class="container-fluid">
+    <h1 class="text-center">Pratica con il Grid System</h1>
+    <div>
+      <h2 class="text-center">Esercizio 1</h2>
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md"><div class="bg-primary text-white p-3 border border-black">1</div></div>
+          <div class="col-md"><div class="bg-primary text-white p-3 border border-black">1</div></div>
+          <div class="col-md"><div class="bg-primary text-white p-3 border border-black">1</div></div>
+        </div>
+      </div>
+      <h2 class="text-center">Esercizio 2</h2>
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md"><div class="text-bg-warning p-3 border border-black">1</div></div>
+          <div class="col-md"><div class="text-bg-warning p-3 border border-black">1</div></div>
+          <div class="col-md"><div class="text-bg-warning p-3 border border-black">1</div></div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
