Exerc. 3 and 4 done

--- a/index.html
+++ b/index.html
@@ -18,17 +18,74 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md"><div class="bg-primary text-white p-3 border border-black">1</div></div>
-          <div class="col-md"><div class="bg-primary text-white p-3 border border-black">1</div></div>
-          <div class="col-md"><div class="bg-primary text-white p-3 border border-black">1</div></div>
+          <div class="col-md"><div class="bg-primary text-white p-3 border border-black">2</div></div>
+          <div class="col-md"><div class="bg-primary text-white p-3 border border-black">3</div></div>
         </div>
       </div>
       <h2 class="text-center">Esercizio 2</h2>
       <div class="container">
         <div class="row text-center">
           <div class="col-md"><div class="text-bg-warning p-3 border border-black">1</div></div>
-          <div class="col-md"><div class="text-bg-warning p-3 border border-black">1</div></div>
-          <div class="col-md"><div class="text-bg-warning p-3 border border-black">1</div></div>
+          <div class="col-md"><div class="text-bg-warning p-3 border border-black">2</div></div>
+          <div class="col-md"><div class="text-bg-warning p-3 border border-black">3</div></div>
         </div>
+      </div>
+      <h2 class="text-center">Esercizio 3</h2>
+      <div class="container">
+        <h3>Extra small -576px</h3>
+        <div class="row text-center">
+          <div class="col"><div class="bg-success text-white p-3 border border-black">1</div></div>
+          <div class="col"><div class="bg-success text-white p-3 border border-black">2</div></div>
+          <div class="col"><div class="bg-success text-white p-3 border border-black">3</div></div>
+        </div>
+      </div>
+      <div class="container">
+        <h3>Small +576px</h3>
+        <div class="row text-center">
+          <div class="col-sm"><div class="bg-success text-white p-3 border border-black">1</div></div>
+          <div class="col-sm"><div class="bg-success text-white p-3 border border-black">2</div></div>
+          <div class="col-sm"><div class="bg-success text-white p-3 border border-black">3</div></div>
+        </div>
+      </div>
+      <div class="container">
+        <h3>Medium +768px</h3>
+        <div class="row text-center">
+          <div class="col-md"><div class="bg-success text-white p-3 border border-black">1</div></div>
+          <div class="col-md"><div class="bg-success text-white p-3 border border-black">2</div></div>
+          <div class="col-md"><div class="bg-success text-white p-3 border border-black">3</div></div>
+        </div>
+      </div>
+      <div class="container">
+        <h3>Large +992px</h3>
+        <div class="row text-center">
+          <div class="col-lg"><div class="bg-success text-white p-3 border border-black">1</div></div>
+          <div class="col-lg"><div class="bg-success text-white p-3 border border-black">2</div></div>
+          <div class="col-lg"><div class="bg-success text-white p-3 border border-black">3</div></div>
+        </div>
+      </div>
+      <div class="container">
+        <h3>Extra Large +1200px</h3>
+        <div class="row text-center">
+          <div class="col-xl"><div class="bg-success text-white p-3 border border-black">1</div></div>
+          <div class="col-xl"><div class="bg-success text-white p-3 border border-black">2</div></div>
+          <div class="col-xl"><div class="bg-success text-white p-3 border border-black">3</div></div>
+        </div>
+      </div>
+      <div class="container">
+        <h3>Extra extra large +1400px</h3>
+        <div class="row text-center">
+          <div class="col-xxl"><div class="bg-success text-white p-3 border border-black">1</div></div>
+          <div class="col-xxl"><div class="bg-success text-white p-3 border border-black">2</div></div>
+          <div class="col-xxl"><div class="bg-success text-white p-3 border border-black">3</div></div>
+        </div>
+      </div>
+    </div>
+    <h2 class="text-center">Esercizio 4</h2>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-xl-2"><div class="text-bg-danger p-3 border border-black">1</div></div>
+        <div class="col-xl-8"><div class="text-bg-danger p-3 border border-black">2</div></div>
+        <div class="col-xl-2"><div class="text-bg-danger p-3 border border-black">3</div></div>
       </div>
     </div>
 
