--- a/index.html
+++ b/index.html
@@ -88,6 +88,28 @@
         <div class="col-xl-2"><div class="text-bg-danger p-3 border border-black">3</div></div>
       </div>
     </div>
+    <h2 class="text-center">Esercizio 5</h2>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-xl-4"><div class="text-bg-primary p-3 border border-black">1</div></div>
+        <div class="col-xl-8">
+          <div class="text-bg-primary p-4 border border-black">
+            <div class="row text-center gap-5">
+              <!--chiedi a lezione se giusto mettere il gap -->
+              <div class="col-sm"><span class="text-bg-secondary p-3 border border-black">Nested 1</span></div>
+              <div class="col-sm"><span class="text-bg-secondary p-3 border border-black">Nested 2</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h2 class="text-center">Esercizio 6</h2>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-xl-2"><div class="text-bg-dark p-3 border">1</div></div>
+        <div class="col-xl-8 offset-2"><div class="text-bg-dark p-3 border">2</div></div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
